--- a/Views/categories.cshtml
+++ b/Views/categories.cshtml
@@ -5,17 +5,31 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
   </head>
   <body>
-  <h1>All categories</h1>
-  @if (@Model.Count == 0)
-  {
-    <p>There are no categories.</p>
-  }
-  <ul>
-    @foreach (var category in Model)
+    <h1>To Do List</h1>
+    <hr />
+    <h2>Categories:</h2>
+    @if (@Model.Count == 0)
     {
-      <li><a href="/categories/@category.GetId()">@category.GetName()</a></li>
+      <p>There are no categories.</p>
     }
-  </ul>
-  <a href="/categories/new">Add new category</a>
+    <ul>
+
+      @if (@Model.Count != 0)
+      {
+        @foreach (var category in Model)
+        {
+          <li><a href="/categories/@category.GetId()">@category.GetName()</a> |
+            <a href="/category/edit/@category.GetId()">Edit</a>|
+            <a href="/category/delete/@category.GetId()">Delete</a>
+          </li>
+        }
+      }
+    </ul>
+    <h4><a href="/categories/new">Add a new category</a></h4>
+    <h4><a href="/">Return home</a></h4>
+
+    <form action="/categories/clear" method="post">
+      <button type="submit">Clear all categories</button>
+    </form>
   </body>
 </html>
