Update HomeModule.cs with new category and task references, update task.cshtml and views files to connect to new HomeModule.cs stuff

--- a/Views/categories.cshtml
+++ b/Views/categories.cshtml
@@ -28,7 +28,7 @@
     <h4><a href="/categories/new">Add a new category</a></h4>
     <h4><a href="/">Return home</a></h4>
 
-    <form action="/categories/clear" method="post">
+    <form action="/categories/delete" method="post">
       <button type="submit">Clear all categories</button>
     </form>
   </body>
