--- a/Views/category.cshtml
+++ b/Views/category.cshtml
@@ -21,7 +21,18 @@
     }
     </ol>
     }
-    <p><a href="/tasks/new">Add a new task</a></p>
+    <h4>Add a task to this category:</h4>
+    <form action='/category/add_task' method='post'>
+      <input id='category-id' name='category-id' type='hidden' value='@Model["category"].GetId()'>
+      <label for='task-id'>Select a task</label>
+      <select id='task-id' name='task-id' type='text'>
+        @foreach (var task in @Model["allTasks"])
+        {
+          <option value='@task.GetId()'>@task.GetDescription()</option>
+        }
+      </select>
+      <button type='submit'>Add</button>
+    </form>
     <p><a href="/">Return to Main Page</a></p>
   </body>
 </html>
