--- a/Views/cleared.cshtml
+++ b/Views/cleared.cshtml
@@ -5,7 +5,7 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
   </head>
   <body>
-    <h3>Tasks cleared!</h3>
+    <h3>Cleared!</h3>
     <a href="/">Back home</a>
   </body>
 </html>
